feat: Mosquitto with WebSocket

--- a/Mosquitto/broker.conf
+++ b/Mosquitto/broker.conf
@@ -30,3 +30,15 @@ listener 8883
 certfile /etc/letsencrypt/live/petificationblue.ddns.net/cert.pem
 cafile /etc/letsencrypt/live/petificationblue.ddns.net/chain.pem
 keyfile /etc/letsencrypt/live/petificationblue.ddns.net/privkey.pem
+
+# listen on secure websocket
+#   We're gonna use port 8433 for secure websocket communication
+listener 8443
+protocol websockets
+#   Path for certification files
+#   If domain is not `petificationblue.ddns.net`, plz modify it.
+certfile /etc/letsencrypt/live/petificationblue.ddns.net/cert.pem
+cafile /etc/letsencrypt/live/petificationblue.ddns.net/fullchain.pem
+keyfile /etc/letsencrypt/live/petificationblue.ddns.net/privkey.pem
+require_certificate false
+tls_version tlsv1.2
